--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="烈火神君的个人网站，欢迎大家访问，这里有许多教程、视频和分享。" />
 		<link href="css/base.css" rel="stylesheet">
 		<link href="css/about.css" rel="stylesheet">
+		<link href="css/media.css" rel="stylesheet">
 		<link href="css/colorful.css" rel="stylesheet">
 		<link href="images/favicon.jpg" rel="shortcut icon">
 		<link href="images/favicon.jpg" rel="Bookmark">
