--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 				<div class="logo"><a href="/"></a></div>
 				<nav id="topnav">
 					<a target="_blank" href="http://lhsj.icu">首页入口</a>
-					<a target="_blank" href="https://www.wulihub.com.cn/gc/qNR4Gq/index.html">备用首页1</a>
+					<a target="_blank" href="https://liil.liil.cc">备用首页1</a>
 					<a target="_blank" href="http://liehuo.lhsj.icu">备用首页2</a>
 					<a target="_blank" href="https://ftp.liil.cc">备用首页3</a>
-					<a target="_blank" href="http://lhsj.icu">首页入口</a>
+					<a target="_blank" href="https://www.wulihub.com.cn/gc/qNR4Gq/index.html">首页入口</a>
 				</nav>
 			</header>
 			<article>
