--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<nav id="topnav">
 					<a target="_blank" href="http://lhsj.icu">首页入口</a>
 					<a target="_blank" href="https://liil.liil.cc">备用首页1</a>
-					<a target="_blank" href="http://liehuo.lhsj.icu">备用首页2</a>
+					<a target="_blank" href="http://luul.cc">域名分发</a>
 					<a target="_blank" href="https://ftp.liil.cc">备用首页3</a>
 					<a target="_blank" href="https://www.wulihub.com.cn/gc/qNR4Gq/index.html">备用首页4</a>
 				</nav>
@@ -54,7 +54,7 @@
 					<p>职业：当代优秀大学生😂</p>
 					<p>籍贯：江西省—赣州市</p>
 					<p>电话：18214994097</p>
-					<p>邮箱：3104117082@qq.com</p>
+					<p>邮箱：liehuosj@qq.com</p>
 					<p>Q Q ：3104117082</p>
 				</div>
 			</aside>
