--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>烈火神君的个人网站🧑</title>
-		<meta name="keywords" content="烈火神君,烈焰仙君,个人网站,liehuo,liil,liehuoshenjun" />
+		<meta name="keywords" content="烈火神君,烈焰仙君,个人网站,liehuo,luul,lnnl,liehuoshenjun" />
 		<meta name="description" content="烈火神君的个人网站，欢迎大家访问，这里有许多教程、视频和分享。" />
 		<link href="css/base.css" rel="stylesheet">
 		<link href="css/about.css" rel="stylesheet">
