--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 					<a target="_blank" href="http://lhsj.icu">首页入口</a>
 					<a target="_blank" href="https://www.luul.cc">备用首页1</a>
 					<a target="_blank" href="https://www.lnnl.cc">备用首页2</a>
-					<a target="_blank" href="https://ftp.liil.cc">备用首页3</a>
-					<a target="_blank" href="http://luul.cc">域名分发</a>
+					<a target="_blank" href="https://liil.liil.cc">备用首页3</a>
+					<a target="_blank" href="http://dns.luul.cc">域名分发</a>
 				</nav>
 			</header>
 			<article>
@@ -50,9 +50,8 @@
 					<p>网名：烈火神君</p>
 					<p>职业：当代优秀大学生😂</p>
 					<p>籍贯：江西省—赣州市</p>
-					<p>电话：18214994097</p>
+					<p>电话：182******97</p>
 					<p>邮箱：liehuosj@qq.com</p>
-					<p>Q Q ：3104117082</p>
 				</div>
 			</aside>
 			<script src="js/silder.js"></script>
